WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237483
Fix for <select> elements in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=237483
Summary
Fix for <select> elements in isolated tree mode.
Andres Gonzalez
Reported
2022-03-04 12:53:50 PST
Fix for <select> elements in isolated tree mode.
Attachments
Patch
(5.88 KB, patch)
2022-03-04 13:07 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(6.64 KB, patch)
2022-03-07 07:10 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2022-03-04 12:59:26 PST
rdar://89530022
Andres Gonzalez
Comment 2
2022-03-04 13:07:43 PST
Created
attachment 453867
[details]
Patch
Tyler Wilcock
Comment 3
2022-03-04 13:55:03 PST
Comment on
attachment 453867
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=453867&action=review
> Source/WebCore/accessibility/AXObjectCache.cpp:3417 > + case AXMenuListValueChanged:
This will cause the entire node to be re-computed (tree->updateNode(*notification.first)). Is there more fine-grained set of properties that we can re-compute via tree->updateNodeProperty instead? I doubt people will be changing menu list values often enough for this to be a performance problem, so if we don't want to spend the time investigating this now it's fine. Just curious if you looked into this.
Andres Gonzalez
Comment 4
2022-03-07 06:48:42 PST
(In reply to Tyler Wilcock from
comment #3
)
> Comment on
attachment 453867
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=453867&action=review
> > > Source/WebCore/accessibility/AXObjectCache.cpp:3417 > > + case AXMenuListValueChanged: > > This will cause the entire node to be re-computed > (tree->updateNode(*notification.first)). Is there more fine-grained set of > properties that we can re-compute via tree->updateNodeProperty instead? > > I doubt people will be changing menu list values often enough for this to be > a performance problem, so if we don't want to spend the time investigating > this now it's fine. Just curious if you looked into this.
I considered this valid point, and there may be other properties besides the value that we need to update. We may refine if need be in a second pass based on the role and the properties that can be affected.
Andres Gonzalez
Comment 5
2022-03-07 07:10:22 PST
Created
attachment 453978
[details]
Patch
EWS
Comment 6
2022-03-07 16:34:22 PST
Committed
r290965
(
248145@main
): <
https://commits.webkit.org/248145@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453978
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug