Fix for <select> elements in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=237483 rdar://89530022

Reviewed by Chris Fleizach.

Source/WebCore:

Test: accessibility/dropdown-value.html

AXObjectCache was not updating the isolated tree for
AXMenuListValueChanged notifications. Added handleMenuListValueChanged()
for this purpose.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::performDeferredCacheUpdate):
(WebCore::AXObjectCache::handleMenuListValueChanged):
(WebCore::AXObjectCache::updateIsolatedTree):
* accessibility/AXObjectCache.h:

LayoutTests:

* accessibility/dropdown-value-expected.txt: Added.
* accessibility/dropdown-value.html: Added.



Canonical link: https://commits.webkit.org/248145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290965 268f45cc-cd09-0410-ab3c-d52691b4dbfc